# mebp2026

./: environment_v4.yml  main.py  pyproject.toml
modulo1/tema1/: 1-herramientas-computacionales.ipynb
modulo1/tema2/: 1-proba-basico.ipynb  2-variables-aleatorias-discretas.ipynb  3-variables-aleatorias-continuas.ipynb  tarea1-repaso-proba.ipynb
