[project]
name = "mebp2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<=3.12"
dependencies = [
    "aeppl==0.0.38",
    "aesara==2.8.7",
    "arviz==0.13.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.3",
    "mkl>=2025.3.1",
    "mkl-service>=2.6.1",
    "pip>=25.3",
    "pymc>=5",
    "seaborn>=0.13.2",
    "theano-pymc==1.1.2",
    "tqdm>=4.67.1",
    "watermark>=2.6.0",
    "numpy>=1.24,<2.0",
    "scipy>=1.10,<1.13"
]
